--- a/css/base/variables.css
+++ b/css/base/variables.css
@@ -25,7 +25,7 @@
 
   /* Screen dimensions */
   --screen-w: 402px;
-  --screen-h: 889px;
+  --screen-h: 874px;
   --status-bar-h: 62px;
   --nav-bar-h: 82.872px;
 
